# game-of-life

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: run_ctest.yml
app/: CMakeLists.txt  main.cpp
include/: CMakeLists.txt  Matrix.hpp  MatrixInitializer.hpp  OutputHelper.hpp  OutputHelperConsole.hpp  OutputHelperPPM.hpp  Simulator.hpp
src/: CMakeLists.txt  Matrix.cpp  MatrixInitializer.cpp  OutputHelper.cpp  OutputHelperConsole.cpp  OutputHelperPPM.cpp  Simulator.cpp
tests/: CMakeLists.txt
tests/Matrix/: test_Matrix_atMethod.cpp  test_Matrix_getNeighbors.cpp  test_Matrix_getSize.cpp
